# weave

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SPEC.md  compose.yml  release-plz.toml
.github/workflows/: ci.yml  docker.yml  release-plz.yml
crates/weave-engine/: CHANGELOG.md  Cargo.toml  README.md
crates/weave-engine/src/: engine.rs  intents.rs  lib.rs  mapping.rs  primitives.rs  route.rs  store.rs  template.rs
crates/weave-server/: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
crates/weave-server/migrations/: 0001_initial.sql  0002_glyphs.sql  0003_templates.sql  0004_device_cycles.sql
crates/weave-server/src/: api.rs  ctx.rs  devices.rs  enforce_single_active.rs  glyphs.rs  main.rs  migrate_target_candidates.rs  mqtt.rs  push_broker.rs  sqlite_store.rs  state_hub.rs  telemetry.rs  templates.rs  web_view.rs  ws_edge.rs  ws_ui.rs
crates/weave-server/src/glyphs/: font.rs
deploy/mosquitto/: mosquitto.conf
deploy/roon-hub/: Dockerfile  roon-hub.toml
design_handoff_weave_redesign/: README.md  hifi-app.jsx  hifi-atoms.jsx  hifi-connection.jsx  hifi-data.jsx  hifi-flow.jsx  hifi-main.jsx  hifi-routes.jsx  hifi-tryit.jsx  weave UX Wireframes.html  weave hi-fi mockup.html
weave-web/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json
weave-web/app/: globals.css  layout.tsx  page.tsx
weave-web/app/@drawer/(.)mappings/[id]/edit/: page.tsx
weave-web/app/@drawer/(.)mappings/new/: page.tsx
weave-web/app/@drawer/(.)stream/: page.tsx
weave-web/app/@drawer/[...catchAll]/: page.tsx
weave-web/app/edges/: page.tsx
weave-web/app/g/: page.tsx
weave-web/app/g/[name]/: page.tsx
weave-web/app/glyphs/: page.tsx
weave-web/app/glyphs/[name]/: page.tsx
weave-web/app/live/: page.tsx
weave-web/app/mappings/: page.tsx
weave-web/app/mappings/[id]/: page.tsx
weave-web/app/mappings/[id]/edit/: page.tsx
weave-web/app/mappings/new/: page.tsx
weave-web/app/stream/: page.tsx
weave-web/components/: AppShell.tsx  CommandPalette.tsx  Drawer.tsx  EdgeCard.tsx  FeedbackSection.tsx  GlyphEditor.tsx  GlyphPicker.tsx  GlyphPreview.tsx  HelpOverlay.tsx  KeyboardBindings.tsx  LightCard.tsx  LiveConsole.tsx  MappingEditForm.tsx  SwitchTargetPopover.tsx  TargetCandidatesSection.tsx  ZoneCard.tsx  icon.ts
weave-web/components/ConnectionsView/: ConnectionCard.tsx  ConnectionsPane.tsx  CycleSection.tsx  DeviceTile.tsx  DevicesPane.tsx  FilterChips.tsx  NuimoViz.tsx  RoutePill.tsx  ServiceCard.tsx  ServicesPane.tsx  TopBar.tsx  index.tsx  useFiringTicker.ts
weave-web/components/RoutesEditor/: Chip.tsx  ChipPopover.tsx  ConnHeader.tsx  FeedbackRail.tsx  FeedbackTemplatePicker.tsx  GesturePicker.tsx  IdentityBlock.tsx  IntentPicker.tsx  PresetChips.tsx  RouteRow.tsx  RoutesList.tsx  RuleSentence.tsx  SaveAsTemplateDialog.tsx  TargetBlock.tsx  TargetPicker.tsx  TargetSwitchingBox.tsx  TemplateCard.tsx  TryFooter.tsx  index.tsx  vocab.ts
weave-web/components/TryItPanel/: GestureChecklist.tsx  InputStreamPanel.tsx  NuimoMirror.tsx  index.tsx
weave-web/components/mobile/: MobileBottomTabs.tsx  MobileConnectionCard.tsx  MobileDevicePicker.tsx  MobileDeviceRow.tsx  MobileHome.tsx  MobileServiceCard.tsx  MobileTopBar.tsx
weave-web/components/panels/: EdgesPanel.tsx  LightsPanel.tsx  MacPanel.tsx  MappingsPanel.tsx  RecentEventsPanel.tsx  ZonesPanel.tsx
weave-web/components/rows/: EdgeRow.tsx  LightRow.tsx  MacRow.tsx  MappingRow.tsx  ZoneRow.tsx
weave-web/components/ui/: card.tsx  combobox.tsx  kbd.tsx  live-dot.tsx  popover.tsx  separator.tsx  tooltip.tsx
weave-web/hooks/: useCommandUI.tsx  useKnownTargets.ts  useMappingDraft.ts  useResponsive.ts  useRowSelection.tsx  useSuggestValues.ts  useTheme.tsx  useTryIt.tsx
weave-web/lib/: api.ts  devices.ts  events.ts  presets.ts  recent-events.tsx  services.ts  templates.ts  ws.tsx
