[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Shin'ichi Ohno <sh1@mercari.com>"]
repository = "https://github.com/shin1ohno/weave"
homepage = "https://github.com/shin1ohno/weave"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

# TEMPORARY: pull the in-progress weave-contracts schema changes
# (target_candidates / target_switch_on) from the edge-agent PR branch
# so both local dev and GitHub Actions CI can build. Once
# shin1ohno/edge-agent#8 merges and weave-contracts is published at the
# new version, drop this patch and bump the crates.io dep in
# crates/weave-server/Cargo.toml.
[patch.crates-io]
weave-contracts = { git = "https://github.com/shin1ohno/edge-agent.git", branch = "feat/weave-contracts-target-candidates" }
