[package]
name = "weave-engine"
description = "Routing engine that maps IoT device primitives (rotate, press, swipe) to service intents (play, volume, brightness)"
version = "0.1.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["iot", "routing", "weave", "mapping"]
categories = ["api-bindings"]

[dependencies]
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
