[package]
name = "weave-server"
description = "HTTP/WebSocket/MQTT control plane for weave — persists mappings, pushes config to edge-agents, bridges MQTT devices to service adapters"
version = "0.1.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["iot", "routing", "weave", "mqtt", "websocket"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { workspace = true }
weave-engine = { version = "0.1", path = "../weave-engine" }
weave-contracts = "0.1"
rumqttc = "0.24"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "uuid"] }
tokio = { workspace = true }
futures-util = "0.3"
async-trait = "0.1"
thiserror = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
