[package]
name = "weave-server"
description = "HTTP/WebSocket/MQTT control plane for weave — persists mappings, pushes config to edge-agents, bridges MQTT devices to service adapters"
version = "0.1.8"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["iot", "routing", "weave", "mqtt", "websocket"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { workspace = true }
weave-engine = { version = "0.1", path = "../weave-engine" }
weave-contracts = "0.15"
rumqttc = "0.24"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "uuid"] }
tokio = { workspace = true }
futures-util = "0.3"
async-trait = "0.1"
thiserror = { workspace = true }
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# OpenTelemetry — OTLP gRPC export to the standalone apm-server LXC
# (apm-server.home.local:8200, TLS, ApiKey auth). Gated by an env var
# (OTEL_EXPORTER_OTLP_ENDPOINT) at runtime so unit tests / local runs
# without apm-server keep working: if the env var is unset, init_telemetry
# falls back to the existing fmt::init() path.
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic", "tls", "tls-roots"] }
tracing-opentelemetry = "0.28"
# tonic is re-exported indirectly by opentelemetry-otlp[grpc-tonic] but we
# need tonic::metadata types directly to build the OTLP header map.
# Version pinned to match opentelemetry-otlp 0.27's transitive dep.
tonic = { version = "0.12", default-features = false, features = ["transport", "tls", "tls-roots"] }
